Name:                osm-download
Version:             0.4
Synopsis:            Download Open Street Map tiles
Description:         Download and locally cache open street map tiles based on HTTP
                     cache control headers.
License:             BSD3
License-file:        LICENSE
Author:              Rob Stewart, Thomas M. DuBuisson
Maintainer:          Thomas.DuBuisson@gmail.com
-- Copyright:
Category:            Network
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.6

Library
  Exposed-modules:     Network.OSM
  Build-depends:       base >= 4 && < 5
                     , conduit >= 1.2
                     , pool-conduit >= 0.1
                     , http-conduit >= 2.1
                     , http-types >= 0.9
                     , bytestring >= 0.10
                     , gps >= 1.2
                     , monad-logger
                     , containers >= 0.5
                     , persistent-sqlite >= 2.2
                     , persistent-template >= 2.1
                     , persistent >= 2.2
                     , mtl >= 2.2
                     , transformers-base >= 0.4
                     , transformers >= 0.4
                     , resourcet
                     , time >= 1.6
                     , stm >= 2.4
                     , monadIO >= 0.10
                     , stm-chans >= 3.0
                     , text >= 1.2
                     , monad-control < 1
                     , data-default >= 0.5
                     , directory >= 1.2
  Other-modules:      Paths_osm_download
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
